Update and rename habiba.html to index.html

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ color:#fff;
  <header>
   <div class="header-content">
     <img src="abina.png" width="50px" height="50px">
-    <h1> M HABIBA RIFASIKA</h1>
+    <h1> M HABIBA RIFASHIKA</h1>
     <p> Studying from computer science </p>
   </div>
  </header>
@@ -86,7 +86,7 @@ color:#fff;
  <section id="about">
   <div class="Section-content">
    <h2>About Me</h2>
-    <p> Hello Everyone!This is M HABIBA RIFASIKA and I am computer science student.</p>
+    <p> Hello Everyone!This is M HABIBA RIFASHIKA and I am computer science student.</p>
   </div>
  </section>
  <section id="education">
@@ -133,7 +133,7 @@ color:#fff;
 <div class="Section-content">
 <h2> Projects </h2>
 <ul>
-<li><a href=""> Project 1</a></li>
+<li><a href="rifaedu.jpg"> Project 1</a></li>
 </ul>
 </div>
 </section>
@@ -141,7 +141,7 @@ color:#fff;
 <div class="Section-content">
 <h2> Resume </h2>
 <ul>
-<li><a href=""
+<li><a href="rifa.pdf"
 class="download-button"> Download CV </a></li>
 </ul>
 </div>
